fixed the layout issues

--- a/js_example/static/css/style.css
+++ b/js_example/static/css/style.css
@@ -85,6 +85,7 @@ body {
 .form-group:last-child {
   margin: 0;
 }
+
 .form-group label {
   display: block;
   margin: 0 0 10px;
@@ -95,6 +96,7 @@ body {
   text-transform: uppercase;
   letter-spacing: .2em;
 }
+
 .two .form-group label {
   color: #FFFFFF;
 }
@@ -154,11 +156,35 @@ body {
   text-transform: uppercase;
   cursor: pointer;
 }
-
+.form-copy button{
+  outline: none;
+  border: 1px solid rgba(0, 0, 0, 0.6);
+  border-radius: 4px;
+  margin: 0 0 10px;
+  background: #FFFFFF;
+  color: rgba(0, 0, 0, 0.8);
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 1;
+  text-transform: uppercase;
+  letter-spacing: .2em;
+  cursor: pointer;
+}
 .form-button-group {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+}
+
+.form-forna {
+  position: relative;
+  background: rgba(0, 0, 0, 0.6);
+  width: 100%;
+  border-radius: 14px;
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
+  box-sizing: border-box;
+  margin: 10px auto 10px;
+  overflow: hidden;
 }
 .two .form-group button {
   background: #FFFFFF;
